fixed z-index on nav, closed #222, revised disclaimer display, and made other small CSS tweaks

--- a/src/components/CategoryNav/CategoryNav.scss
+++ b/src/components/CategoryNav/CategoryNav.scss
@@ -12,7 +12,7 @@
     justify-content: space-between;
 
     > nav {
-        width: 100%;
+        width: auto;
         background-color: $white-base;
     }
 }
@@ -20,7 +20,6 @@
 @media screen and (width >= $screen-md-min) {
     .root {
 		padding: 0 15px;
-        flex-wrap: nowrap;
 
         > nav {
             background-color: transparent;
