--- a/src/components/CategoryNav/MenuItem.scss
+++ b/src/components/CategoryNav/MenuItem.scss
@@ -1,150 +1,153 @@
 @import '../variables.scss';
 
 .root {
-    display: block;
-    width: 100%;
-    padding: 10px;
-		z-index: 9999999;
+	z-index: 200;
+	display: block;
+	width: 100%;
+	padding: 10px;
 
-    > a {
-        position: relative;
-        display: block;
-        width: 0;
-        font-family: $font-family-em;
-        color: $black-base;
-        white-space: nowrap;
-        cursor: pointer;
-        justify-content: space-between;
-        align-items: center;
+	> a {
+		position: relative;
+		display: block;
+		width: 0;
+		font-family: $font-family-em;
+		color: $black-base;
+		white-space: nowrap;
+		cursor: pointer;
 
-        > span:first-child {
-            padding: 0 5px;
-        }
+		justify-content: space-between;
+		align-items: center;
 
-        > span:last-child {
-            display: none;
-            width: 0;
-            height: 0;
-            border-top: 5px solid $black-base;
-            border-right: 5px solid transparent;
-            border-left: 5px solid transparent;
-        }
-    }
+		> span:first-child {
+			padding: 0 5px;
+		}
 
-    &.parent {
-        > a {
-            font-size: 1em;
-            font-weight: 600;
-            text-decoration: none;
-            text-transform: uppercase;
-            letter-spacing: .03em;
-            border-bottom: 3px solid transparent;
-            transition: .5s ease;
-        }
+		> span:last-child {
+			display: none;
+			width: 0;
+			height: 0;
+			border-top: 5px solid $black-base;
+			border-right: 5px solid transparent;
+			border-left: 5px solid transparent;
+		}
+	}
 
-        &:hover > a {
-            width: 100%;
-            border-bottom-color: $new-red;
-            opacity: .5;
-        }
-    }
+	&.parent {
+		> a {
+			font-size: 1em;
+			font-weight: 600;
+			text-decoration: none;
+			text-transform: uppercase;
+			letter-spacing: .03em;
+			border-bottom: 3px solid transparent;
+			transition: .5s ease;
+		}
 
-    > div {
-        top: 46px;
-        display: flex;
-        padding: 0;
-        margin: 0;
-        flex-direction: row;
-        background-color: $lookup-color;
-        align-items: stretch;
-        flex-wrap: wrap;
-        justify-content: space-around;
+		&:hover > a {
+			width: 100%;
+			border-bottom-color: $new-red;
+			opacity: .5;
+		}
+	}
 
-        > div {
-						overflow:hidden;
-            display: block;
-            width: auto;
-            min-width: 250px;
-            padding: 10px;
-            margin: 0;
-            border: none;
-            flex: 1;
-            background-color: $white-base;
+	> div {
+		top: 46px;
+		display: flex;
+		padding: 0;
+		margin: 0;
+		flex-direction: row;
+		background-color: $lookup-color;
 
-            > a {
-                font-family: $font-family-base;
-                font-size: 16px;
-                text-decoration: none;
-                letter-spacing: .025em;
-                transition: border-bottom .2s ease;
+		align-items: stretch;
+		flex-wrap: wrap;
+		justify-content: space-around;
 
-                &:hover {
-                    span:first-child {
-                        border-bottom: 1px solid $new-red;
-                    }
-                }
+		> div {
+			display: block;
+			width: auto;
+			min-width: 250px;
+			padding: 10px;
+			margin: 0;
+			overflow: hidden;
+			background-color: $white-base;
+			border: none;
 
-                span:first-child {
-                    font-weight: 600;
-                    border-bottom: 1px solid transparent;
-                }
+			flex: 1;
 
-                span:last-child {
-                    display: none;
-                }
-            }
+			> a {
+				font-family: $font-family-base;
+				font-size: 16px;
+				text-decoration: none;
+				letter-spacing: .025em;
+				transition: border-bottom .2s ease;
 
-            > div {
-                position: relative;
-                top: 0;
-                display: block !important;
-                padding: 0;
-                background-color: $white-base;
+				&:hover {
+					span:first-child {
+						border-bottom: 1px solid $new-red;
+					}
+				}
 
-                > div {
-                    padding: 0 0 0 10px;
-                    border: none;
+				span:first-child {
+					font-weight: 600;
+					border-bottom: 1px solid transparent;
+				}
 
-                    > a {
-                        &:hover span:first-child {
-                            text-decoration: underline;
-                            border-bottom: none;
-                        }
+				span:last-child {
+					display: none;
+				}
+			}
 
-                        span:first-child {
-                            font-size: 14px;
-                            font-weight: normal;
-                            letter-spacing: .03em;
-                        }
-                    }
-                }
-            }
-        }
-    }
+			> div {
+				position: relative;
+				top: 0;
+				// display: block !important;
+				padding: 0;
+				background-color: $white-base;
+
+				> div {
+					padding: 0 0 0 10px;
+					border: none;
+
+					> a {
+						&:hover span:first-child {
+							text-decoration: underline;
+							border-bottom: none;
+						}
+
+						span:first-child {
+							font-size: 14px;
+							font-weight: normal;
+							letter-spacing: .03em;
+						}
+					}
+				}
+			}
+		}
+	}
 }
 
 @media screen and (width >= $screen-md-min) {
-    .root {
-        border-right: 1px solid $black-base;
-        width: auto;
+	.root {
+		width: auto;
+		border-right: 1px solid $black-base;
 
-        &.parent {
-            > a {
-                font-size: .8em;
-            }
-        }
+		&.parent {
+			> a {
+				font-size: .7em;
+			}
+		}
 
-        > div {
-            position: absolute;
-        }
+		> div {
+			position: absolute;
+		}
 
-        > a {
-            display: flex;
-            width: auto;
+		> a {
+			display: flex;
+			width: auto;
 
-            span:last-child {
-                display: inline-block;
-            }
-        }
-    }
+			span:last-child {
+				display: inline-block;
+			}
+		}
+	}
 }
